playing around with fonts and sizes

--- a/themes/hugo-webslides/static/css/webslides.css
+++ b/themes/hugo-webslides/static/css/webslides.css
@@ -794,7 +794,7 @@ body,
 input,
 select,
 textarea {
-  font-family: 'Roboto', 'San Francisco', helvetica, arial, sans-serif;
+  font-family: 'Abel', 'San Francisco', helvetica, arial, sans-serif;
   font-size: 62.5%; }
 
 body,
@@ -1070,7 +1070,8 @@ h3 [class*='bg-'] {
 /* -- Serif -- */
 .text-serif,
 h1 span {
-  font-family: 'Maitree', times, serif; }
+  font-family: 'Abel', sans-serif;
+}
 
 /* -- h1,h2... Promo/Landings -- */
 .text-landing {
