--- a/themes/hugo-webslides/layouts/_default/baseof.html
+++ b/themes/hugo-webslides/layouts/_default/baseof.html
@@ -12,8 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
     <!-- CSS Base -->
     <link rel="stylesheet" type='text/css' media='all' href="css/webslides.css">
     <link rel="stylesheet" type="text/css" media="all" href="css/svg-icons.css">
